# python-programming-exercises

./: .gitignore  README.md  caesar_cipher.py  credentials.json  data_science.py  event_scheduler.py  library.py  log_counting.py  password_manager.py  pyproject.toml
data/: data.csv
tests/: test_log_counting.py
