[project]
name = "python-programming-exercises"
version = "0.1.0"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnknownMemberType = "warning"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
]
